# STARE

./: Dockerfile
docker_files/: test.py
src/: CMakeLists.txt  PySTARE.cpp
